--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-<link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+<link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
